syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
option go_package = ".;pb";


message Todo{
  int64 id = 1;
  string name = 2;
  bool done = 3;
  google.protobuf.Timestamp created_at = 4;
  string description = 5;
}
message TodoRequest {
  int64 user_id = 2;
  Todo todo = 1;
}
message TodoMarkdoneRequest {
  int64  user_id = 1;
  int64 todo_id = 2;
}
message TodoMarkDoneResponse {
  bool done = 1;
}
message TodoResponse {
  string id = 1;
}
message  TodoList {
  repeated Todo data = 1;
}
service TodoService {
  rpc Create(TodoRequest) returns (TodoResponse){
    option (google.api.http) = {
      post: "/v1/todos"
      body: "*"
    };
  };
  rpc MarkDone(TodoMarkdoneRequest) returns (TodoMarkDoneResponse){
    option (google.api.http) = {
      post: "/v1/todos/markdone"
      body: "*"
    };
  };
}
